<resources>

    <!-- Overall Strings -->
    <string name="app_name">Hospitales RD</string>

    <!-- Navigation drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_option_profile">My Profile</string>
    <string name="nav_drawer_option_medical_centers">Medical Centers</string>

    <string name="nav_drawer_tittle_configurations">Configurations</string>
    <string name="nav_drawer_option_settings">Settings</string>
    <string name="nav_drawer_option_about">About</string>

    <!-- Dummy Strings -->
    <string name="dummy_user_name">Android Studio</string>
    <string name="dummy_user_email">android.studio@android.com</string>
    <string name="dummy_user_age">Age: 46</string>
    <string name="dummy_user_blood_type">Bloodtype: A+</string>
    <string name="dummy_user_address">Address: somewhere Ln. @ Invisible Palace (pálte atrá)</string>
    <string name="dummy_poi_tittle">Medical Center name</string>
    <string name="dummy_poi_distance">185 mts.</string>
    <string name="dummy_poi_description">Address: somewhere Ln. @ Invisible Palace (pálte atrá)</string>
    <string name="dummy_ars_name">ARS Humano</string>
    <string name="dummy_ars_member_id">54893574168514</string>
    <string name="dummy_ars_client">Position Logic SRL</string>
    <string name="dummy_ars_account_type">MAX</string>

    <!-- Content Description for images -->
    <string name="desc_app_icon">Application Logo</string>

    <!-- Sign-in status messages -->
    <string name="signing_in">Signing in…</string>
    <string name="signed_in_format">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
<!--
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
-->

    <!-- Button labels -->
    <string name="button_sign_out">Sign Out</string>
    <string name="button_disconnect">Disconnect</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_medical_center_list">MedicalCenterListActivity</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- Activity Settings -->
    <string name="title_activity_settings">Settings</string>
    <!-- Shared Preferences Headers -->
    <string name="pref_header_map">Map</string>
    <!-- Shared Preferences keys -->
    <string name="pref_key_map_style" translatable="false">map_style</string>
    <!-- Shared  Preferences Titles-->
    <string name="pref_title_map_style">Map style</string>
    <!-- Shared  Preferences Defaults-->
    <string name="pref_default_map_style" translatable="false">101</string>
    <!-- Shared Preferences Defaults-->
    <string-array name="pref_list_map_style">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="pref_list_map_style_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sites_list">SitesListActivity</string>
    <string name="title_activity_login">Sign in</string>





    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>



    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_map">ListMapActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "This is some basic user information we have to work with"
    </string>


    <!--PREFERENCES CATEGORY TITLES-->
    <string name="pref_category_title_reporting">REPORTING SETTINGS</string>
    <string name="pref_category_title_advanced">ADVANCED</string>
    <string name="pref_category_title_about">ABOUT</string>

    <!--PREFERENCES TITLES-->
    <string name="pref_tittle_accuracy">Accuracy</string>
    <string name="pref_tittle_frequency">Frequency</string>
    <string name="pref_tittle_panic_frequency">Panic Frequency</string>
    <string name="pref_tittle_start_on_boot">Start on Boot</string>
    <string name="pref_tittle_debug_mode">Debug Mode</string>
    <string name="pref_tittle_gps_only">GPS Only</string>
    <string name="pref_tittle_crash_reports">Crash Reports</string>
    <string name="pref_tittle_account_id">Account ID</string>
    <string name="pref_tittle_license_id">License Key</string>
    <string name="pref_tittle_device_id">Device ID</string>
    <string name="pref_tittle_version_id">Version</string>
    <string name="pref_tittle_build_id">Build</string>

    <!--PREFERENCES SUMMARIES-->
    <string name="pref_summary_accuracy">Accuracy threshold</string>
    <string name="pref_summary_frequency">How often are location reports sent</string>
    <string name="pref_summary_panic_frequency">how often are panic reports sent</string>
    <string name="pref_summary_start_on_boot_on">Reporting will start automatically on boot</string>
    <string name="pref_summary_start_on_boot_off">Reporting will not start on boot</string>
    <string name="pref_summary_debug_mode_on">Use diagnostic tools (for testers only)</string>
    <string name="pref_summary_debug_mode_off">Use the standard application interface for users</string>
    <string name="pref_summary_gps_only_on">GPS based location only (may cause missed reports)</string>
    <string name="pref_summary_gps_only_off">Accepts location data from all location providers</string>
    <string name="pref_summary_crash_reports_on">Send crash reports whenever the application crashes</string>
    <string name="pref_summary_crash_reports_off">Ask permission before sending crash reports</string>

    <!--PREFERENCES KEYS-->
    <string name="pref_key_accuracy">reporting_accuracy</string>
    <string name="pref_key_frequency">reporting_frequency</string>
    <string name="pref_key_panic_frequency">panic_frequency</string>
    <string name="pref_key_start_on_boot">auto_start</string>
    <string name="pref_key_debug_mode">debug_mode</string>
    <string name="pref_key_gps_only">gps_restricted</string>
    <string name="pref_key_crash_reports">acra.alwaysaccept</string>
    <string name="pref_key_account_id">account_id</string>
    <string name="pref_key_licence_id">licence_id</string>
    <string name="pref_key_device_id">device_id</string>
    <string name="pref_key_version_id">version_id</string>
    <string name="pref_key_build_id">build_id</string>

    <!--PREFERENCES DEFAULTS-->
    <string name="pref_default_accuracy">0</string>
    <string name="pref_default_frequency">300000</string>
    <string name="pref_default_panic_frequency">60000</string>


    <string-array name="pref_frequency_titles">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_frequency_values">
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>

    <string-array name="pref_accuracy_titles">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_accuracy_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_panic_frequency_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_panic_frequency_values">
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
    </string-array>

</resources>
