<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_title_reporting">
        <ListPreference
            android:defaultValue="@string/pref_default_accuracy"
            android:entries="@array/pref_accuracy_titles"
            android:entryValues="@array/pref_accuracy_values"
            android:key="@string/pref_key_accuracy"
            android:summary="@string/pref_summary_accuracy"
            android:title="@string/pref_tittle_accuracy" />
        <ListPreference
            android:defaultValue="@string/pref_default_frequency"
            android:entries="@array/pref_frequency_titles"
            android:entryValues="@array/pref_frequency_values"
            android:key="@string/pref_key_frequency"
            android:summary="@string/pref_summary_frequency"
            android:title="@string/pref_tittle_frequency" />
        <ListPreference
            android:defaultValue="@string/pref_default_panic_frequency"
            android:entries="@array/pref_panic_frequency_titles"
            android:entryValues="@array/pref_panic_frequency_values"
            android:key="@string/pref_key_panic_frequency"
            android:summary="@string/pref_summary_panic_frequency"
            android:title="@string/pref_tittle_panic_frequency" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_advanced">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_start_on_boot"
            android:summaryOff="@string/pref_summary_start_on_boot_off"
            android:summaryOn="@string/pref_summary_start_on_boot_on"
            android:title="@string/pref_tittle_start_on_boot" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_debug_mode"
            android:summaryOff="@string/pref_summary_debug_mode_off"
            android:summaryOn="@string/pref_summary_debug_mode_on"
            android:title="@string/pref_tittle_debug_mode" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_gps_only"
            android:summaryOff="@string/pref_summary_gps_only_off"
            android:summaryOn="@string/pref_summary_gps_only_on"
            android:title="@string/pref_tittle_gps_only" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_crash_reports"
            android:summaryOff="@string/pref_summary_crash_reports_off"
            android:summaryOn="@string/pref_summary_crash_reports_on"
            android:title="@string/pref_tittle_crash_reports" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_about">
        <EditTextPreference
            android:inputType="textCapWords"
            android:key="@string/pref_key_account_id"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_tittle_account_id" />
        <EditTextPreference
            android:inputType="textCapWords"
            android:key="@string/pref_key_licence_id"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_tittle_license_id" />
        <Preference
            android:key="@string/pref_key_device_id"
            android:title="@string/pref_tittle_device_id" />
        <Preference
            android:key="@string/pref_key_version_id"
            android:title="@string/pref_tittle_version_id" />
        <Preference
            android:key="@string/pref_key_build_id"
            android:title="@string/pref_tittle_build_id" />
    </PreferenceCategory>


</PreferenceScreen>