<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/nav_drawer_option_profile" />
        <item
            android:id="@+id/nav_medical_centers"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/nav_drawer_option_medical_centers" />
    </group>

    <item android:title="@string/nav_drawer_tittle_configurations">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_tune_black_24dp"
                android:title="@string/nav_drawer_option_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/nav_drawer_option_about" />
        </menu>
    </item>

</menu>